feat: change Toast font size

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -101,6 +101,7 @@ h1 {
   position: fixed;
   transform: translateX(-50%) translateY(150%);
   transition: transform .35s ease;
+  font-size: 20px;
 }
 
 #toast.show {
